--- a/education.fsproj
+++ b/education.fsproj
@@ -18,5 +18,6 @@
     <Compile Include="lesson_11.fs" />
     <Compile Include="lesson_12.fs" />
     <Compile Include="lesson_13.fs" />
+    <Compile Include="lesson_14.fs" />
   </ItemGroup>
 </Project>
