--- a/education.fsproj
+++ b/education.fsproj
@@ -21,5 +21,6 @@
     <Compile Include="lesson_14.fs" />
     <Compile Include="lesson_15.fs" />
     <Compile Include="lesson_16.fs" />
+    <Compile Include="lesson_17.fs" />
   </ItemGroup>
 </Project>
