--- a/education.fsproj
+++ b/education.fsproj
@@ -22,5 +22,6 @@
     <Compile Include="lesson_15.fs" />
     <Compile Include="lesson_16.fs" />
     <Compile Include="lesson_17.fs" />
+    <Compile Include="lesson_18.fs" />
   </ItemGroup>
 </Project>
